--- a/config.yml
+++ b/config.yml
@@ -12,7 +12,7 @@
 debug: true
 
 # Image version
-version: 0.0.8
+version: 0.1.0
 
 # AWS configs
 aws:
@@ -42,7 +42,7 @@ aws:
   disk_size: 16
 
 cml:
-  debian_package: cml2_2.6.1-11_amd64.deb
+  debian_package: cml2_2.7.0dev0-1660_amd64.deb
 
   copy_reference_platforms: true
   # select the ones needed by un-/commenting them. The selected
@@ -51,31 +51,37 @@ cml:
   reference_platforms:
     definitions:
       - alpine
-      #- alpine-trex
-      #- alpine-wanem
-      #- asav
-      #- cat8000v
-      #- cat9000v-s1
-      #- csr1000v
-      #- desktop
+      - alpine-trex
+      - alpine-wanem
+      - asav
+      - cat8000v
+      - cat9000v-q200
+      - cat9000v-uadp
+      - csr1000v
+      - desktop
+      - iol-xe
+      - ioll2-xe
       - iosv
       - iosvl2
-      #- iosxrv9000
-      #- nxosv9000
-      #- server
-      #- ubuntu
+      - iosxrv9000
+      - nxosv9000
+      - server
+      - ubuntu
     images:
-      - alpine-3-16-2-base
-      #- alpine-3-16-2-trex
-      #- alpine-3-16-2-wanem
-      #- asav-9-18-2
-      #- cat8000v-17-09-01a
-      #- cat9000v-s1-17.10.01prd7
-      #- csr1000v-17-03-06
-      #- desktop-3-16-2-xfce
-      - iosv-159-3-m6
+      - alpine-base-3-19-1
+      - alpine-desktop-3-19-1
+      - alpine-trex-3-19-1
+      - alpine-wanem-3-19-1
+      - asav-9-20-2
+      - cat8000v-17-13-01a
+      - cat9000v-q200-17-12-01prd9
+      - cat9000v-uadp-17-12-01prd9
+      - csr1000v-17-03-08a
+      - iol-xe-17-12-01
+      - ioll2-xe-17-12-01
+      - iosv-159-3-m8
       - iosvl2-2020
-      #- iosxrv9000-7-7-1
-      #- nxosv9300-10-3-1-f
-      #- server-tcl-13-1
-      #- ubuntu-22-04-20221028
+      - iosxrv9000-7-11-1
+      - nxosv9300-10-4-2-f
+      - server-tcl-14-0
+      - ubuntu-22-04-20240126
