--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,6 +4,8 @@
 # All rights reserved.
 #
 
+
+
 steps:
   - name: 'us-east1-docker.pkg.dev/gcp-asigbahgcp-nprd-47930/bah-builders/cloud-cml-img'
     env:
@@ -17,8 +19,11 @@ steps:
       - 'PACKER_LOG=1'
       - 'LOCATION=$LOCATION'
       - 'PROJECT_ID=$PROJECT_ID'
-      - 'ZONE=$LOCATION-b'
+      - 'LOCATION=${LOCATION}'
+      - 'ZONE=${LOCATION}-b'
       - 'SERVICE_ACCOUNT_EMAIL=$SERVICE_ACCOUNT_EMAIL'
+      # Also see refplat.json for the list of node definitions and images to
+      # include on the controller
 
     script: |
       #!/usr/bin/env bash
@@ -35,6 +40,7 @@ steps:
       packer init /workspace/cloud-cml-gce.pkr.hcl
       packer validate \
         -var "service_account_email=$SERVICE_ACCOUNT_EMAIL" \
+        -var "location=$LOCATION" \
         -var "zone=$ZONE" \
         -var "project_id=$PROJECT_ID" \
         -var "source_image_family=$SOURCE_IMAGE_FAMILY" \
@@ -45,6 +51,7 @@ steps:
         /workspace/cloud-cml-gce.pkr.hcl
       packer build \
         -var "service_account_email=$SERVICE_ACCOUNT_EMAIL" \
+        -var "location=$LOCATION" \
         -var "zone=$ZONE" \
         -var "project_id=$PROJECT_ID" \
         -var "source_image_family=$SOURCE_IMAGE_FAMILY" \
