--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,7 +11,7 @@ steps:
     env:
       - 'SOURCE_IMAGE_FAMILY=ubuntu-2004-lts'
       - 'SOURCE_IMAGE_PROJECT_ID=ubuntu-os-cloud'
-      - 'PROVISION_SCRIPT=setup.sh'
+      - 'PROVISION_SCRIPT=cml.sh'
       - 'GCS_ARTIFACT_BUCKET=bah-machine-images'
       - 'CML_PACKAGE=cml2_2.7.0-4_amd64-20.pkg'
       - 'APT_OPTS="-o Dpkg::Options::=--force-confmiss -o Dpkg::Options::=--force-confnew -o DPkg::Progress-Fancy=0 -o APT::Color=0"'
@@ -59,8 +59,10 @@ steps:
         -var "provision_script=$PROVISION_SCRIPT" \
         -var "gcs_artifact_bucket=$GCS_ARTIFACT_BUCKET" \
         -var "cml_package=$CML_PACKAGE" \
-        /workspace/cloud-cml-gce.pkr.hcl && \
-        jq . /workspace/manifest.json
+        /workspace/cloud-cml-gce.pkr.hcl
+
+      # If packer creates artifacts, list them
+      [ -f /workspace/manifest.json ] && jq . /workspace/manifest.json
 
 
 logsBucket: 'gs://bah-build-logs/cloud-cml-img'
