Attempt upgrade to CML 2.8 and Ubuntu 24.04

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,11 +12,12 @@ steps:
       # SSH might be listening on port 1122.
       - 'DEBUG=true'
       - 'PACKER_LOG=0'
-      - 'SOURCE_IMAGE_FAMILY=ubuntu-2004-lts'
+      # Discover these with `gcloud compute images list --project ubuntu-os-cloud`
+      - 'SOURCE_IMAGE_FAMILY=ubuntu-2404-lts-amd64'
       - 'SOURCE_IMAGE_PROJECT_ID=ubuntu-os-cloud'
       - 'PROVISION_SCRIPT=cml.sh'
       - 'GCS_ARTIFACT_BUCKET=bah-machine-images'
-      - 'CML_PACKAGE_PATH=cml2/cml2_2.7.1-20_amd64-25.pkg'
+      - 'CML_PACKAGE_PATH=cml2/cml2_2.8.0-6_amd64-32.pkg'
       - 'LOCATION=$LOCATION'
       - 'PROJECT_ID=$PROJECT_ID'
       - 'LOCATION=${LOCATION}'
