--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,6 +18,7 @@ steps:
       - 'PROVISION_SCRIPT=cml.sh'
       - 'GCS_ARTIFACT_BUCKET=bah-machine-images'
       - 'CML_PACKAGE_PATH=cml2/cml2_2.8.0-6_amd64-32.pkg'
+      - 'CML_VERSION=2.8.0-6'
       - 'LOCATION=$LOCATION'
       - 'PROJECT_ID=$PROJECT_ID'
       - 'LOCATION=${LOCATION}'
@@ -51,6 +52,7 @@ steps:
         -var "provision_script=$PROVISION_SCRIPT" \
         -var "gcs_artifact_bucket=$GCS_ARTIFACT_BUCKET" \
         -var "cml_package_path=$CML_PACKAGE_PATH" \
+        -var "cml_version=$CML_VERSION" \
         /workspace/cloud-cml-gce.pkr.hcl
       packer build \
         -var "debug=$DEBUG" \
@@ -63,6 +65,7 @@ steps:
         -var "provision_script=$PROVISION_SCRIPT" \
         -var "gcs_artifact_bucket=$GCS_ARTIFACT_BUCKET" \
         -var "cml_package_path=$CML_PACKAGE_PATH" \
+        -var "cml_version=$CML_VERSION" \
         /workspace/cloud-cml-gce.pkr.hcl
 
       # If packer creates artifacts, list them
